--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Redirecting</title>
-      <meta http-equiv = "refresh" content = "2; url = "https://the-biscord.netlify.app/" />
+      <meta http-equiv = "refresh" content = "2; url = https://the-biscord.netlify.app/" />
    </head>
    <body>
       <p>Hello HTML5!</p>
