--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,9 @@
 <html>
    <head>
       <title>Redirecting</title>
-      <meta http-equiv = "refresh" content = "2; url = https://the-biscord.netlify.app/" />
+      <meta http-equiv = "refresh" content = "2; url = https://the-biscord-v1.netlify.app/" />
    </head>
-   <body>
-      <p>Hello HTML5!</p>
+   <body style="background-color:#363c47;">
+     <h1>Please Stand By</h1>
    </body>
 </html>
