--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 <html>
    <head>
       <title>Redirecting</title>
+      <link rel="stylesheet" href="index.css">
       <meta http-equiv = "refresh" content = "2; url = https://the-biscord-v1.netlify.app/" />
    </head>
    <body style="background-color:#363c47;">
