--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,14 @@
+
 <!DOCTYPE html>
 <html>
    <head>
       <title>Redirecting</title>
       <link rel="stylesheet" href="index.css">
-      <meta http-equiv = "refresh" content = "2; url = https://the-biscord-v1.netlify.app/" />
+      <meta http-equiv = "refresh" content = "1100110; url = https://the-biscord-v1.netlify.app/" />
    </head>
    <body style="background-color:#363c47;">
      <h1>Please Stand By</h1>
-   </body>
+<img src="pic_trulli.jpg" alt="Italian Trulli">
+
+</body>
 </html>
