--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
       <title>Redirecting</title>
       <link rel="stylesheet" href="index.css">
       <meta http-equiv = "refresh" content = "1; url = https://the-biscord-v1.netlify.app/" />
+      <link rel="shortcut icon" href="https://ssl.gstatic.com/classroom/favicon.png">
    </head>
    <body style="background-color:#363c47;">
      <h1>Please Stand By</h1>
