--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
    <head>
       <title>Redirecting</title>
       <link rel="stylesheet" href="index.css">
-      <meta http-equiv = "refresh" content = "1; url = https://the-biscord-v3.netlify.app/" />
+      <meta http-equiv = "refresh" content = "1; url = https://the-biscord-v.netlify.app/" />
       <link rel="shortcut icon" href="https://ssl.gstatic.com/classroom/favicon.png">
    </head>
    <body style="background-color:#363c47;">
